Bug 165780 - BASIC code completion does not work until experimental features are enabled
Summary: BASIC code completion does not work until experimental features are enabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Hossein
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: BASIC-IDE
  Show dependency treegraph
 
Reported: 2025-03-17 12:36 UTC by Hossein
Modified: 2025-10-01 14:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hossein 2025-03-17 12:36:59 UTC
Description:
BASIC code completion options are always visible in the "Tools > Options > LibreOffice > Code Completion", but code completion does not work when you enable it, until you also enable experimental features.

Steps to Reproduce:
1. Open "Tools > Options > LibreOffice > Code Completion"
2. Make sure that every option in the page is checked.
3. Make sure that "Experimental Features" are not enabled in "Tools > Options > LibreOffice > Advanced"
4. Open BASIC editor.
5. Type this code:

Sub Main
	Dim aPicker As com.sun.star.ui.dialogs.XFilePicker
        aPicker.
End Sub

Actual Results:
After typing "aPicker" and then "." (dot), you should be able to see the code completion popup, but nothing happens.

Expected Results:
Code completion popup should appear. If you enable "Experimental Features" from "Tools > Options > LibreOffice > Advanced" and try again, you should be able to see that.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b19d2a6be09a8eab35b44f62f97c8d4eabb8a3cb
CPU threads: 12; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: CL threaded

I can imagine two different approaches to avoid confusion:

1. Also hide the relevant options until this is more mature to come out of experimental
2. Take it out of experimental right now, as it is a useful feature that works.
Comment 1 Commit Notification 2025-07-14 20:29:03 UTC
Hossein committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a72fc05f49f4026f8f7f07a6254e74a8033cb740

tdf#165780 BASIC IDE code completion without experimental

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.